[package]
name = "webby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4", package = "gtk4" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "cookies"] }
quick-xml = "0.22"
mlua = { version = "0.7", features = ["lua54"] }
