[package]
name = "webby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gtk = { version = "0.4", package = "gtk4" }
mlua = { version = "0.7", features = ["lua54"] }
quick-xml = "0.22"
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
mime = "0.3"
